; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_pathspec.c_test_repo_pathspec__workdir4.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_pathspec.c_test_repo_pathspec__workdir4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@str4 = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"\E8\BF\99\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_pathspec__workdir4() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @str4, align 4
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @str4, align 4
  %7 = call i32 @ARRAY_SIZE(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = call i32 @git_pathspec_new(i32** %2, %struct.TYPE_3__* %1)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* @g_repo, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @git_pathspec_match_workdir(i32** %3, i32 %11, i32 0, i32* %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @git_pathspec_match_list_entrycount(i32* %15)
  %17 = call i32 @cl_assert_equal_sz(i32 13, i32 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @git_pathspec_match_list_entry(i32* %18, i32 12)
  %20 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @git_pathspec_match_list_free(i32* %21)
  %23 = load i32*, i32** %2, align 8
  %24 = call i32 @git_pathspec_free(i32* %23)
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_pathspec_new(i32**, %struct.TYPE_3__*) #1

declare dso_local i32 @git_pathspec_match_workdir(i32**, i32, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_sz(i32, i32) #1

declare dso_local i32 @git_pathspec_match_list_entrycount(i32*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_pathspec_match_list_entry(i32*, i32) #1

declare dso_local i32 @git_pathspec_match_list_free(i32*) #1

declare dso_local i32 @git_pathspec_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
